--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>nl.hu.v1wac</groupId>
+	<groupId>nl.hu.ipass</groupId>
 	<artifactId>vergelijkNL</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
