--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 		  <artifactId>jsoup</artifactId>
 		  <version>1.10.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.5.0-b01</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
